fix: update header CTA margin for improved spacing

--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -70,7 +70,7 @@ header {
 
 
 /* MEDIA QUERIES (tablets) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {    
     .header__profile {
         margin-top: 1rem;
         width: 14rem;
@@ -84,7 +84,7 @@ header {
     }
 
     .header__cta {
-        /* margin-bottom: 3rem; */
+        margin-bottom: 1rem;
         gap: 1rem;
     }
 
